tests/specs/no_ambient_in_module.txt
# mod.ts
declare function foo(): number;
export function bar() {};

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:1
  | 
2 | export function bar() {};
  | ^

# output.txt
Defined in file:///mod.ts:1:1

function bar(): void


# output.json
{
  "symbols": [
    {
      "name": "bar",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 1,
            "col": 0,
            "byteIndex": 32
          },
          "declarationKind": "export",
          "kind": "function",
          "def": {
            "params": [],
            "returnType": {
              "repr": "void",
              "kind": "keyword",
              "value": "void"
            },
            "hasBody": true,
            "isAsync": false,
            "isGenerator": false,
            "typeParams": []
          }
        }
      ]
    }
  ]
}
